(fix) wrapping link

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -27,13 +27,14 @@
         &:hover { text-decoration: none; }
     } @else if $hover == box {
         white-space: nowrap;
+        display: inline-block;
         position: relative;
         margin-left: $spacing-2;
 
         &::before {
             content: '';
             width: calc(100% + 10px);
-            height: calc(100% + 4px);
+            height: 100%;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -117,22 +118,22 @@
         small {
             @include Paragraph($muted: true);
         }
+    }
 
-        .avatar {
-            position: relative;
-            display: inline-block;
-            width: 16px;
-            height: 16px;
-            border-radius: 4px;
-            overflow: hidden;
-            object-fit: cover;
-            transform: translate(0, 3px);
-            border: 1px solid var(--color-border);
-            margin-right: $spacing-6;
-            background: $color-background;
-    
-            img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 0; }
-        }
+    .avatar {
+        position: relative;
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        border-radius: 4px;
+        overflow: hidden;
+        object-fit: cover;
+        transform: translate(0, 3px);
+        border: 1px solid var(--color-border);
+        margin-right: $spacing-6;
+        background: $color-background;
+
+        img { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 0; }
     }
 
 
